# Customer_Churn

./: .gitignore  2_cleaning.ipynb  Makefile  README.md  pyproject.toml
data/interim/: OHE.pkl  employee_count_imputer.pkl  sales_revenue_imputer.pkl  scaler.pkl  y_test.pkl  y_train.pkl
docs/: Makefile  conf.py  initial_thoughts.md  make.bat
notebooks/: 1_EDA.ipynb  2_cleaning.ipynb  3_modelling.ipynb  4_explainability.ipynb  5_X_test_tranformation.ipynb  5_X_test_transformation.ipynb  6_test_predictions.ipynb
references/: initial_thoughts.md  question.md
reports/: 1_EDA.html  2_cleaning.html  3_modelling.html  4_explainability.html  5_X_test_transformation.html  6_test_predictions.html
