[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "customer_churn"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
missingno = "^0.5.2"
imbalanced-learn = "^0.11.0"
shap = "^0.43.0"
dill = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
